Lab-5 Ingress/lab-05-ingress-04.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-05-ingress-04

spec:
  selector:
    matchLabels:
      app: lab-05-ingress-04
  template:
    metadata:
      labels:
        app: lab-05-ingress-04
    spec:
      hostname: nginx2
      containers:
      - name: lab-05-ingress-04
        image: stenote/nginx-hostname
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: lab-05-ingress-04

spec:
  selector:
    app: lab-05-ingress-04
  ports:
  - port: 8668
    targetPort: 80
