Lab-5 Ingress/lab-05-ingress-05-01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-05-ingress-05-web1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab-05-ingress-05-web1
  template:
    metadata:
      labels:
        app: lab-05-ingress-05-web1
    spec:
      containers:
        - name: lab-05-ingress-05-web1
          image: katacoda/docker-http-server:latest
          ports:
            - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-05-ingress-05-web2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab-05-ingress-05-web2
  template:
    metadata:
      labels:
        app: lab-05-ingress-05-web2
    spec:
      containers:
        - name: lab-05-ingress-05-web2
          image: katacoda/docker-http-server:latest
          ports:
            - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-05-ingress-05-web3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab-05-ingress-05-web3
  template:
    metadata:
      labels:
        app: lab-05-ingress-05-web3
    spec:
      containers:
        - name: lab-05-ingress-05-web3
          image: katacoda/docker-http-server:latest
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: lab-05-ingress-05-web1-svc
  labels:
    app: lab-05-ingress-05-web1
spec:
  #type: NodePort
  ports:
    - port: 80
  selector:
    app: lab-05-ingress-05-web1

---

apiVersion: v1
kind: Service
metadata:
  name: lab-05-ingress-05-web2-svc
  labels:
    app: lab-05-ingress-05-web2
spec:
  #type: NodePort
  ports:
    - port: 80
  selector:
    app: lab-05-ingress-05-web2

---

apiVersion: v1
kind: Service
metadata:
  name: lab-05-ingress-05-web3-svc
  labels:
    app: lab-05-ingress-05-web3
spec:
  #type: NodePort
  ports:
    - port: 80
  selector:
    app: lab-05-ingress-05-web3
